# MusicApp

./: .gitignore  CMakeLists.txt  MusicApp.plog  MusicApp.sln
MusicApp/: App.xaml  App.xaml.cs  App.xaml.cs.orig  MainWindow.xaml  MainWindow.xaml.cs  MusicApp.csproj  MusicApp.csproj.orig  NLog.config
MusicApp/Configs/: ViewConfig.cs
MusicApp/DynamicResource/: BindingDynamicResourceConverter.cs  BindingLocalizationListener.cs  CultureChangedDynamicResourceEventManager.cs  DynamicResourceListener.cs  IEventManager.cs  KeyDynamicResourceListener.cs  Manager.cs  Provider.cs
MusicApp/DynamicResource/Base/: BaseDynamicResourceListener.cs  BaseManager.cs  BaseProvider.cs  BindingDynamicResourceConverter.cs  BindingLocalizationListener.cs  CultureChangedDynamicResourceEventManager.cs  DynamicResourceListener.cs  IDynamicResourceManager.cs  IDynamicResourceProvider.cs  IEventManager.cs  KeyDynamicResourceListener.cs  Manager.cs  Provider.cs
MusicApp/DynamicResource/Languages/: LanguageNode.cs  LanguagesExtension.cs  LanguagesManager.cs  ResxLanguagesProvider.cs  XMLLanguageChangerProvider.cs
MusicApp/DynamicResource/Themes/: ResxThemeChangerProvider.cs  ThemeExtension.cs  ThemeManager.cs  XMLThemeChangerProvider.cs
MusicApp/Localize/: BaseLocalizationListener.cs  BindingLocalizationConverter.cs  BindingLocalizationListener.cs  CultureChangedEventManager.cs  ILocalizationProvider.cs  KeyLocalizationListener.cs  LocalizationExtension.cs  LocalizationManager.cs  ResxLocalizationProvider.cs
MusicApp/Logic/: BasicLogic.cs  ResourceManager.cs
MusicApp/Models/: BaseCommand.cs  CustomCultureInfo.cs  MenuItem.cs  RelayCommand.cs  RelayCommandAsync.cs  RelayCommandWithParameter.cs  RelayCommandWithParameterAsync.cs  ThemeInfo.cs  ViewInfo.cs
MusicApp/Models/Commands/: BaseCommand.cs  RelayCommand.cs  RelayCommandAsync.cs  RelayCommandWithParameter.cs  RelayCommandWithParameterAsync.cs
MusicApp/Properties/: AssemblyInfo.cs  Resources.Designer.cs
MusicApp/Resources/: Icons.xaml
MusicApp/Resources/Controls/: BluringContainer.xaml  BluringContainer.xaml.cs  HamburgerMenu.xaml  HamburgerMenu.xaml.cs  HamburgerMenuListBox.xaml  HamburgerMenuListBox.xaml.cs  HamburgerMenuToggleButton.xaml  HamburgerMenuToggleButton.xaml.cs
MusicApp/Resources/DataTemplates/: MenuItem.cs
MusicApp/Resources/Languages/: Language.Designer.cs  Language.resx  Language.ru.resx  Languages.xml  LanguagesSchema.xsd  language.xaml
MusicApp/Resources/Styles/: HamburgerMenuStyles.Light.xaml  HamburgerMenuStyles.xaml  MainWindowStyles.light.xaml  MainWindowStyles.xaml
MusicApp/Resources/Templates/: HamburgerMenuTemplates.xaml  MainWindowTemplates.xaml
MusicApp/Resources/Themes/: Theme.Designer.cs  Theme.resx  Theme.ru.resx  Themes.xml  ThemesSchema.xsd
MusicApp/ThemeChanger/: BaseThemeChangerListener.cs  BindingThemeChangerConverter.cs  BindingThemeChangerListener.cs  IThemeChangerProvider.cs  KeyThemeChangerListener.cs  ResxThemeChangerProvider.cs  ThemeChangedEventManager.cs  ThemeChangerExtension.cs  ThemeChangerManager.cs
MusicApp/Trash/: HamburgerMenuStyles.xaml  HamburgerMenuTemplates.xaml
MusicApp/ViewModels/: BaseViewModel.cs  HamburgerMenuViewModel.cs  IBaseViewModel.cs  IMenuViewModel.cs  IViewModel.cs  MainViewModel.cs  MenuViewModel.cs  ViewModel.cs
MusicApp/Views/: HamburgerMenu.xaml  HamburgerMenu.xaml.cs  HomeView.xaml  HomeView.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MainWindow.xaml.orig  SettingsView.xaml  SettingsView.xaml.cs
MusicApp/v15/Server/sqlite3/: storage.ide-shm  storage.ide-wal
