cmake_minimum_required(VERSION 3.12)
project(MusicApp)

set(CMAKE_CXX_STANDARD 14)

add_executable(MusicApp
        MusicApp/bin/Debug/de/Microsoft.Expression.Interactions.resources.dll
        MusicApp/bin/Debug/de/System.Windows.Interactivity.resources.dll
        MusicApp/bin/Debug/en/Microsoft.Expression.Interactions.resources.dll
        MusicApp/bin/Debug/en/System.Windows.Interactivity.resources.dll
        MusicApp/bin/Debug/es/Microsoft.Expression.Interactions.resources.dll
        MusicApp/bin/Debug/es/System.Windows.Interactivity.resources.dll
        MusicApp/bin/Debug/fr/Microsoft.Expression.Interactions.resources.dll
        MusicApp/bin/Debug/fr/System.Windows.Interactivity.resources.dll
        MusicApp/bin/Debug/it/Microsoft.Expression.Interactions.resources.dll
        MusicApp/bin/Debug/it/System.Windows.Interactivity.resources.dll
        MusicApp/bin/Debug/ja/Microsoft.Expression.Interactions.resources.dll
        MusicApp/bin/Debug/ja/System.Windows.Interactivity.resources.dll
        MusicApp/bin/Debug/ko/Microsoft.Expression.Interactions.resources.dll
        MusicApp/bin/Debug/ko/System.Windows.Interactivity.resources.dll
        MusicApp/bin/Debug/ru/Microsoft.Expression.Interactions.resources.dll
        MusicApp/bin/Debug/ru/System.Windows.Interactivity.resources.dll
        MusicApp/bin/Debug/zh-Hans/Microsoft.Expression.Interactions.resources.dll
        MusicApp/bin/Debug/zh-Hans/System.Windows.Interactivity.resources.dll
        MusicApp/bin/Debug/zh-Hant/Microsoft.Expression.Interactions.resources.dll
        MusicApp/bin/Debug/zh-Hant/System.Windows.Interactivity.resources.dll
        MusicApp/bin/Debug/Microsoft.Expression.Interactions.dll
        MusicApp/bin/Debug/MusicApp.exe
        MusicApp/bin/Debug/MusicApp.exe.config
        MusicApp/bin/Debug/MusicApp.pdb
        MusicApp/bin/Debug/System.Windows.Interactivity.dll
        MusicApp/bin/Release/de/Microsoft.Expression.Interactions.resources.dll
        MusicApp/bin/Release/de/System.Windows.Interactivity.resources.dll
        MusicApp/bin/Release/en/Microsoft.Expression.Interactions.resources.dll
        MusicApp/bin/Release/en/System.Windows.Interactivity.resources.dll
        MusicApp/bin/Release/es/Microsoft.Expression.Interactions.resources.dll
        MusicApp/bin/Release/es/System.Windows.Interactivity.resources.dll
        MusicApp/bin/Release/fr/Microsoft.Expression.Interactions.resources.dll
        MusicApp/bin/Release/fr/System.Windows.Interactivity.resources.dll
        MusicApp/bin/Release/it/Microsoft.Expression.Interactions.resources.dll
        MusicApp/bin/Release/it/System.Windows.Interactivity.resources.dll
        MusicApp/bin/Release/ja/Microsoft.Expression.Interactions.resources.dll
        MusicApp/bin/Release/ja/System.Windows.Interactivity.resources.dll
        MusicApp/bin/Release/ko/Microsoft.Expression.Interactions.resources.dll
        MusicApp/bin/Release/ko/System.Windows.Interactivity.resources.dll
        MusicApp/bin/Release/ru/Microsoft.Expression.Interactions.resources.dll
        MusicApp/bin/Release/ru/System.Windows.Interactivity.resources.dll
        MusicApp/bin/Release/zh-Hans/Microsoft.Expression.Interactions.resources.dll
        MusicApp/bin/Release/zh-Hans/System.Windows.Interactivity.resources.dll
        MusicApp/bin/Release/zh-Hant/Microsoft.Expression.Interactions.resources.dll
        MusicApp/bin/Release/zh-Hant/System.Windows.Interactivity.resources.dll
        MusicApp/bin/Release/Microsoft.Expression.Interactions.dll
        MusicApp/bin/Release/MusicApp.exe
        MusicApp/bin/Release/MusicApp.exe.config
        MusicApp/bin/Release/MusicApp.pdb
        MusicApp/bin/Release/System.Windows.Interactivity.dll
        MusicApp/Configs/ViewConfig.cs
        MusicApp/Logic/BasicLogic.cs
        MusicApp/Logic/ResourceManager.cs
        MusicApp/Models/MenuItem.cs
        MusicApp/Models/RelayCommand.cs
        MusicApp/Models/RelayCommandWithParameter.cs
        MusicApp/Models/ViewInfo.cs
        MusicApp/obj/Debug/Resources/Languages/language.baml
        MusicApp/obj/Debug/Resources/Languages/language.ru-RU.baml
        MusicApp/obj/Debug/Resources/Styles/HamburgerMenuStyles.baml
        MusicApp/obj/Debug/Resources/Styles/HamburgerMenuStyles.light.baml
        MusicApp/obj/Debug/Resources/Styles/MainWindowStyles.baml
        MusicApp/obj/Debug/Resources/Styles/MainWindowStyles.light.baml
        MusicApp/obj/Debug/Resources/Templates/HamburgerMenuTemplates.baml
        MusicApp/obj/Debug/Resources/Templates/MainWindowTemplates.baml
        MusicApp/obj/Debug/Resources/Icons.baml
        MusicApp/obj/Debug/TempPE/Properties.Resources.Designer.cs.dll
        MusicApp/obj/Debug/Views/HamburgerMenu.baml
        MusicApp/obj/Debug/Views/HamburgerMenu.g.cs
        MusicApp/obj/Debug/Views/HamburgerMenu.g.i.cs
        MusicApp/obj/Debug/Views/HumburgerMenu.g.i.cs
        MusicApp/obj/Debug/Views/MainWindow.g.cs
        MusicApp/obj/Debug/Views/MainWindow.g.i.cs
        MusicApp/obj/Debug/App.baml
        MusicApp/obj/Debug/App.g.cs
        MusicApp/obj/Debug/App.g.i.cs
        MusicApp/obj/Debug/DesignTimeResolveAssemblyReferences.cache
        MusicApp/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
        MusicApp/obj/Debug/GeneratedInternalTypeHelper.g.cs
        MusicApp/obj/Debug/GeneratedInternalTypeHelper.g.i.cs
        MusicApp/obj/Debug/MainWindow.g.i.cs
        MusicApp/obj/Debug/MusicApp.csproj.CopyComplete
        MusicApp/obj/Debug/MusicApp.csproj.CoreCompileInputs.cache
        MusicApp/obj/Debug/MusicApp.csproj.FileListAbsolute.txt
        MusicApp/obj/Debug/MusicApp.csproj.GenerateResource.cache
        MusicApp/obj/Debug/MusicApp.csprojAssemblyReference.cache
        MusicApp/obj/Debug/MusicApp.exe
        MusicApp/obj/Debug/MusicApp.g.resources
        MusicApp/obj/Debug/MusicApp.pdb
        MusicApp/obj/Debug/MusicApp.Properties.Resources.resources
        MusicApp/obj/Debug/MusicApp_MarkupCompile.i.cache
        MusicApp/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
        MusicApp/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
        MusicApp/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
        MusicApp/obj/Release/Resources/Languages/language.baml
        MusicApp/obj/Release/Resources/Languages/language.ru-RU.baml
        MusicApp/obj/Release/Resources/Styles/HamburgerMenuStyles.baml
        MusicApp/obj/Release/Resources/Styles/HamburgerMenuStyles.light.baml
        MusicApp/obj/Release/Resources/Styles/MainWindowStyles.baml
        MusicApp/obj/Release/Resources/Styles/MainWindowStyles.light.baml
        MusicApp/obj/Release/Resources/Templates/HamburgerMenuTemplates.baml
        MusicApp/obj/Release/Resources/Icons.baml
        MusicApp/obj/Release/TempPE/Properties.Resources.Designer.cs.dll
        MusicApp/obj/Release/Views/HamburgerMenu.baml
        MusicApp/obj/Release/Views/HamburgerMenu.g.cs
        MusicApp/obj/Release/Views/HamburgerMenu.g.i.cs
        MusicApp/obj/Release/Views/MainWindow.baml
        MusicApp/obj/Release/Views/MainWindow.g.cs
        MusicApp/obj/Release/Views/MainWindow.g.i.cs
        MusicApp/obj/Release/App.baml
        MusicApp/obj/Release/App.g.cs
        MusicApp/obj/Release/App.g.i.cs
        MusicApp/obj/Release/MusicApp.csproj.CopyComplete
        MusicApp/obj/Release/MusicApp.csproj.CoreCompileInputs.cache
        MusicApp/obj/Release/MusicApp.csproj.FileListAbsolute.txt
        MusicApp/obj/Release/MusicApp.csproj.GenerateResource.cache
        MusicApp/obj/Release/MusicApp.exe
        MusicApp/obj/Release/MusicApp.g.resources
        MusicApp/obj/Release/MusicApp.pdb
        MusicApp/obj/Release/MusicApp.Properties.Resources.resources
        MusicApp/obj/Release/MusicApp_MarkupCompile.cache
        MusicApp/obj/Release/MusicApp_MarkupCompile.lref
        MusicApp/obj/Release/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
        MusicApp/obj/Release/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
        MusicApp/obj/Release/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
        MusicApp/Properties/AssemblyInfo.cs
        MusicApp/Properties/Resources.Designer.cs
        MusicApp/Properties/Resources.resx
        MusicApp/Properties/Settings.Designer.cs
        MusicApp/Properties/Settings.settings
        MusicApp/Resources/Languages/language.ru-RU.xaml
        MusicApp/Resources/Languages/language.xaml
        MusicApp/Resources/Styles/HamburgerMenuStyles.light.xaml
        MusicApp/Resources/Styles/HamburgerMenuStyles.xaml
        MusicApp/Resources/Styles/MainWindowStyles.light.xaml
        MusicApp/Resources/Styles/MainWindowStyles.xaml
        MusicApp/Resources/Templates/HamburgerMenuTemplates.xaml
        MusicApp/Resources/Templates/MainWindowTemplates.xaml
        MusicApp/Resources/Icons.xaml
        MusicApp/ViewModels/BaseViewModel.cs
        MusicApp/ViewModels/HamburgerMenuViewModel.cs
        MusicApp/ViewModels/IBaseViewModel.cs
        MusicApp/ViewModels/IMenuViewModel.cs
        MusicApp/ViewModels/IViewModel.cs
        MusicApp/Views/HamburgerMenu.xaml
        MusicApp/Views/HamburgerMenu.xaml.cs
        MusicApp/Views/MainWindow.xaml
        MusicApp/Views/MainWindow.xaml.cs
        MusicApp/App.config
        MusicApp/App.xaml
        MusicApp/App.xaml.cs
        MusicApp/MusicApp.csproj
        .gitattributes
        .gitignore
        MusicApp.sln)
